feat: 清理番剧查询死代码并修复 N+1 查询